use textarea for output

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         
   			<div class="alert alert-info">
 					<a class="close" data-dismiss="alert">&times;</a> <strong>Welcome!</strong>
-          Use this simple page to poke around at the API.
+          Use this simple page to experiment with AJAX calls.
           Specify HTTP method, URL and parameters, and click on <b>Ajax Request</b>.
           Note that this page requires a browser with HTML5 support.
 				</div>
@@ -244,7 +244,7 @@
 			<div class="span6">
 				<div id="ajaxoutput">
 					<pre id="statuspre">0</pre>
-					<pre class="pre-scrollable prettyprint linenums" id="outputpre"></pre>
+					<textarea id="outputpre"></textarea>
 					<pre class="pre-scrollable prettyprint linenums" id="headerpre"></pre>
 				</div>
 			</div>
