update HTML links for this version

--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
 				<a class="btn btn-navbar" data-toggle="collapse"
 					data-target=".nav-collapse"> <span class="icon-bar"></span> <span
 					class="icon-bar"></span> <span class="icon-bar"></span>
-				</a> <a class="brand" href="#">REST test test...</a>
+				</a> <a class="brand" href="#">Ajax Tester</a>
 				<div class="nav-collapse">
 					<ul class="nav">
-						<li><a target="_blank" href="https://github.com/jeroenooms/resttesttest">Source Code</a></li>
-						<li><a target="_blank" href="https://github.com/jeroenooms/resttesttest/issues/new">Submit Bug</a></li>
-						<li><a target="_blank" href="http://jeroenooms.github.io">Author</a></li>
+						<li><a target="_blank" href="https://github.com/criesbeck/AjaxTester">Source Code</a></li>
+						<li><a target="_blank" href="http://jeroenooms.github.io">Original Author</a></li>
 					</ul>
 				</div>
 				<!--/.nav-collapse -->
